@@ -14,6 +14,71 @@
 
 Add-Type -AssemblyName System.ServiceProcess
 
+function Get-ServicePermissions
+{
+    <#
+    .SYNOPSIS
+    Gets the permissions for a service.
+    
+    .DESCRIPTION
+    Uses the Win32 advapi32 API to query the permissions for a service.  Returns `Carbon.ServiceAccessRule` objects for each.  The two relavant properties on this object are
+    
+     * IdentityReference - The identity of the permission.
+     * ServiceAccessRights - The permissions the user has.
+    
+    .EXAMPLE
+    Get-ServicePermissions -Name 'Hyperdrive'
+    
+    Gets the access rules for the `Hyperdrive` service.
+    #>
+    [CmdletBinding()]
+    param(
+        [Parameter(Mandatory=$true)]
+        [string]
+        # The name of the service whose permissions to return.
+        $Name
+    )
+    
+    $sdBytes = [Carbon.AdvApi32]::GetServiceSecurityDescriptor($Name)
+    
+    $rsd = New-Object Security.AccessControl.RawSecurityDescriptor $sdBytes,0
+    $racl = $rsd.DiscretionaryAcl
+    $dacl = New-Object Security.AccessControl.DiscretionaryAcl $false,$false,$racl
+
+    $dacl |
+        ForEach-Object {
+            $ace = $_
+            
+            $aceSid = $ace.SecurityIdentifier;
+            if( $aceSid.IsValidTargetType([Security.Principal.NTAccount]) )
+            {
+                try
+                {
+                    $aceSid = $aceSid.Translate([Security.Principal.NTAccount])
+                }
+                catch [Security.Principal.IdentityNotMappedException]
+                {
+                    # user doesn't exist anymore.  So sad.
+                }
+            }
+
+            if ($ace.AceType -eq [Security.AccessControl.AceType]::AccessAllowed)
+            {
+                $ruleType = [Security.AccessControl.AccessControlType]::Allow
+            }
+            elseif ($ace.AceType -eq [Security.AccessControl.AceType]::AccessDenied)
+            {
+                $ruleType = [Security.AccessControl.AccessControlType]::Deny
+            }
+            else
+            {
+                Write-Error ("Unsupported aceType {0}." -f $ace.AceType)
+                return
+            }
+            New-Object Carbon.Security.ServiceAccessRule $aceSid,$ace.AccessMask,$ruleType            
+        }
+}
+
 function Grant-ServiceControlPermission
 {
     <#
